[package]
name = "rstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.27.0", features = ["full"]}
axum = {version = "0.6.17", features = ["multipart"]}
diesel = {version = "2.0.4", features = ["postgres", "r2d2"]}
dotenvy ={ version = "0.15.7"}
log = { version = "0.4.17"}
log4rs = { version = "1.2.0"}
rust-s3 = {version = "0.33"}
aws-region = "0.25.3"
aws-creds = "0.35.0"
futures = "0.3.17"
tracing-subscriber = "0.3.17"
tower-http = "0.4.0"
config = "0.13.3"
serde = { version = "1.0.160", optional = true, features = ["derive"] }

[features]
default = ["std"]
std = [ "serde" ]